@@ -2,6 +2,7 @@ package org.coode.www.service;
 
 import org.coode.www.model.characteristics.Characteristic;
 import org.coode.www.model.AxiomWithMetadata;
+import org.coode.www.util.PageData;
 import org.semanticweb.owlapi.manchestersyntax.renderer.ManchesterOWLSyntaxObjectRenderer;
 import org.semanticweb.owlapi.model.OWLAxiom;
 import org.semanticweb.owlapi.model.OWLOntology;
@@ -15,48 +16,64 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-
 @Service
 public class OWLAxiomService {
 
     private final Map<OWLOntology, Map<OWLAxiom, String>> axiomsRenderingsByOntology = new HashMap<>();
 
-    public Characteristic getAxioms(Set<OWLOntology> onts) {
+    public Characteristic getAxioms(
+            Set<OWLOntology> onts,
+            int start,
+            int pageSize) {
         // avoid generating search indices as not needed
         List<AxiomWithMetadata> results = onts.stream()
                 .flatMap(o -> wrappedWithOntology(o.axioms(Imports.EXCLUDED), o))
-                .collect(Collectors.toList());
-        return new Characteristic(null, "Axioms", results);
+                .toList();
+        List<AxiomWithMetadata> paged = results.stream().skip(start-1).limit(pageSize).toList();
+        return new Characteristic(null, "Axioms",
+                paged,
+                new PageData(start, Integer.min(paged.size(), pageSize), results.size()));
     }
 
-    public Characteristic findAxioms(final String search, final Set<OWLOntology> onts, final ShortFormProvider sfp) {
-        return resultsCharacteristic(search, onts, sfp, e -> e.getValue().contains(search));
+    public Characteristic findAxioms(
+            final String search,
+            final Set<OWLOntology> onts,
+            final ShortFormProvider sfp,
+            int start,
+            int pageSize) {
+        return resultsCharacteristic(search, onts, sfp, e -> e.getValue().contains(search), start, pageSize);
     }
+//
+//    public Characteristic regexAxioms(final String search, final Set<OWLOntology> onts, final ShortFormProvider sfp) {
+//        return resultsCharacteristic(search, onts, sfp, e -> e.getValue().matches(search), start, pageSize);
+//    }
 
-    public Characteristic regexAxioms(final String search, final Set<OWLOntology> onts, final ShortFormProvider sfp) {
-        return resultsCharacteristic(search, onts, sfp, e -> e.getValue().matches(search));
-    }
-
-    private Characteristic resultsCharacteristic(final String search,
-                                                 final Set<OWLOntology> onts,
-                                                 final ShortFormProvider sfp,
-                                                 final Predicate<? super Map.Entry<OWLAxiom, String>> filter) {
+    private Characteristic resultsCharacteristic(
+            final String search,
+            final Set<OWLOntology> onts,
+            final ShortFormProvider sfp,
+            final Predicate<? super Map.Entry<OWLAxiom, String>> filter,
+            int start,
+            int pageSize) {
         List<AxiomWithMetadata> results = onts.stream()
                 .flatMap(o -> wrappedWithOntology(filterAxioms(search, o, sfp, filter), o))
-                .collect(Collectors.toList());
-        return new Characteristic(null, "Axioms containing \"" + search + "\"", results);
+                .toList();
+        List<AxiomWithMetadata> paged = results.stream().skip(start-1).limit(pageSize).toList();
+        return new Characteristic(null, "Axioms containing \"" + search + "\"",
+                paged,
+                new PageData(start, Integer.min(paged.size(), pageSize), results.size()));
     }
 
-    private Stream<OWLAxiom> filterAxioms(final String search,
-                                          final OWLOntology ont,
-                                          final ShortFormProvider sfp,
-                                          final Predicate<? super Map.Entry<OWLAxiom, String>> filter) {
+    private Stream<OWLAxiom> filterAxioms(
+            final String search,
+            final OWLOntology ont,
+            final ShortFormProvider sfp,
+            final Predicate<? super Map.Entry<OWLAxiom, String>> filter) {
         ensureCache(ont, sfp);
 
         if (search == null || search.isEmpty()) {
             return axiomsRenderingsByOntology.get(ont).keySet().stream();
-        }
-        else {
+        } else {
             return axiomsRenderingsByOntology.get(ont).entrySet().stream()
                     .filter(filter)
                     .map(Map.Entry::getKey);
@@ -64,9 +81,7 @@ public class OWLAxiomService {
     }
 
     private void ensureCache(OWLOntology ont, ShortFormProvider sfp) {
-        if (!axiomsRenderingsByOntology.containsKey(ont)) {
-            axiomsRenderingsByOntology.put(ont, ont.getAxioms(Imports.EXCLUDED).stream().collect(Collectors.toMap(ax -> ax, ax -> render(ax, sfp))));
-        }
+        axiomsRenderingsByOntology.putIfAbsent(ont, ont.getAxioms(Imports.EXCLUDED).stream().collect(Collectors.toMap(ax -> ax, ax -> render(ax, sfp))));
     }
 
     private String render(final OWLAxiom axiom, final ShortFormProvider sfp) {
